# demo

./: .coverage  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  __init__.py  calc.py  calc.py.rej  examples.py  pyproject.toml  task_1.md  task_2.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/routers/: calc.py
app/tests/: test_api.py
